tests/ui/view_return_local.stderr
Error [E0206]: this value can't be handed back as a shared view
  --> tests/ui/view_return_local.lex:3:12
    |
  3 |     return msg;
    |            ^^^
 Why: a `view` return may only point at a parameter, a whole-number or yes/no name, or a const — not at fresh text you just made here
 Fix: return a parameter or const, copy with `.clone()` into an owned return type, or change `-> view` to `->`
