tests/ui/view_return_local.lex
fn bad() -> view String {
    val msg: String = "hi";
    return msg;
}

fn main() {
    print(0);
}
